--- a/src/components/AnimatedLetters/AnimatedLetters.scss
+++ b/src/components/AnimatedLetters/AnimatedLetters.scss
@@ -1,20 +1,20 @@
-@import "../../sass/variables";
+@use "../../sass/variables" as *;
 
 .text-animate {
-  display: inline-block;
-  opacity: 0;
-  animation: fadeInUp 0.6s ease forwards;
-  animation-delay: 0.5s;
-  min-width: 10px;
+    display: inline-block;
+    opacity: 0;
+    animation: fadeInUp 0.6s ease forwards;
+    animation-delay: 0.5s;
+    min-width: 10px;
 }
 
 .text-animate-hover {
-  display: inline-block;
-  animation-fill-mode: both;
-  cursor: pointer;
+    display: inline-block;
+    animation-fill-mode: both;
+    cursor: pointer;
 
-  &:hover {
-    animation: rubberBand 1s;
-    color: $accent-coral;
-  }
+    &:hover {
+        animation: rubberBand 1s;
+        color: $accent-coral;
+    }
 }
