--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,90 +1,89 @@
-@import "../../sass/mixins.scss";
-@import "../../sass/variables.scss";
+@use "../../sass/variables" as *;
+@use "../../sass/mixins" as *;
+
 .navBar {
-  position: fixed;
-  top: auto;
-  bottom: 3%;
-  left: 50%;
-  width: 70%;
-  z-index: 1;
-  background-color: $color-grey;
-  border-radius: 3rem;
-  animation: fade-navPhone-in 1s ease-in-out forwards;
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  @include respondMobileFirst(phone) {
-    top: 35%;
-    left: 3%;
-    width: auto;
-    bottom: auto;
-    animation: fade-nav-in 1s ease-in-out forwards;
-  }
+    position: fixed;
+    top: auto;
+    bottom: 3%;
+    left: 50%;
+    width: 70%;
+    z-index: 1;
+    background-color: rgba($accent-navy, 0.08);
+    border-radius: 3rem;
+    animation: fade-navPhone-in 1s ease-in-out forwards;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+
+    @include respondMobileFirst(phone) {
+        top: 35%;
+        left: 3%;
+        width: auto;
+        bottom: auto;
+        animation: fade-nav-in 1s ease-in-out forwards;
+    }
 }
 
 .navBar__ul {
-  display: flex;
-  padding: 8px 8px;
-  flex-direction: row;
-  justify-content: space-around;
-  gap: 15px;
-  @include respondMobileFirst(phone) {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 15px 10px;
-  }
-}
-.navBar__li {
-  a {
-    width: 100%;
-    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    i {
-      width: 100%;
-      height: 100%;
+    padding: 8px 8px;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 15px;
+
+    @include respondMobileFirst(phone) {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 15px 10px;
     }
-  }
 }
+
+.navBar__li {
+    a {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
 .icon {
-  font-size: 4rem;
-  font-weight: bold;
-  border-radius: 50%;
-  background-color: $color-blue;
-  padding: 3px;
-  transition: fill 0.1s ease-in-out;
-  fill: $white-color;
-  border: 2px solid transparent;
-  &:hover {
-    fill: $color-blue;
-    background-color: $white-color;
-    border: 2px solid $color-blue;
-  }
-}
-.active .icon {
-  fill: $color-blue;
-  background-color: $white-color;
-  border: 2px solid $color-blue;
+    width: 3.6rem;
+    height: 3.6rem;
+    stroke-width: 1.8;
+    border-radius: 50%;
+    background-color: $accent-navy;
+    padding: 6px;
+    transition: all $transition-fast;
+    color: white;
+    border: 2px solid transparent;
+
+    &:hover {
+        color: $accent-navy;
+        background-color: white;
+        border-color: $accent-navy;
+    }
 }
 
 @keyframes fade-nav-in {
-  0% {
-    opacity: 0;
-    transform: translateX(-200px);
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
+    0% {
+        opacity: 0;
+        transform: translateX(-200px);
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
+
 @keyframes fade-navPhone-in {
-  0% {
-    opacity: 0;
-    transform: translate(-200px);
-  }
-  100% {
-    transform: translate(-50%);
-    opacity: 1;
-  }
+    0% {
+        opacity: 0;
+        transform: translate(-200px);
+    }
+    100% {
+        transform: translate(-50%);
+        opacity: 1;
+    }
 }
