--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import "mixins";
-@import "base";
-@import "keyframes";
-@import "aria";
+@use "variables" as *;
+@use "mixins" as *;
+@use "base" as *;
+@use "keyframes" as *;
+@use "aria" as *;
